--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: go
 go: 1.1
 
 before_script:
-    - github.com/axw/gocov/gocov
+    - go get github.com/axw/gocov/gocov
 script:
  - $GOPATH/bin/gocov test -v | $GOPATH/bin/gocov report
