--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: go
 go: 1.1
 
-before_script:
+install:
     - go get github.com/axw/gocov/gocov
-    - go install github.com/axw/gocov/gocov
 script:
  - $GOPATH/bin/gocov test -v | $GOPATH/bin/gocov report
