--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
     - go get github.com/axw/gocov/gocov
 script:
     - ls $GOPATH/bin
-    - /home/travis/gopath/bin/gocov test -v | /home/travis/gopath/bin/gocov report
+    - $HOME/gopath/bin/gocov test -v | $HOME/gopath/bin/gocov report
