--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ go: 1.1
 install:
     - go get github.com/axw/gocov/gocov
 script:
-    - ls $GOPATH/bin
+    - go get ./...
     - $HOME/gopath/bin/gocov test -v | $HOME/gopath/bin/gocov report
