more about the uploader and monitor

--- a/sample-config.yaml
+++ b/sample-config.yaml
@@ -1,10 +1,11 @@
 auth:
     accesskey: hello
     secretkey: password
+monitordirs: 
+    - path: fixtures/monitordir/
+      bucket: 34
+      prehooks:
+        - compress
+      posthooks:
+        - delete
 
-monitorDir:
-    path: /mnt/logs/test.out
-    preHooks: 
-        -compress
-    postHooks:
-        -delete
