one more time with this yaml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
     - ./run.sh -n
 script:
     - go get -v ./...
-    - PATH=$PATH:$HOME/gopath/bin $HOME/gopath/bin/mocktest ./... | $HOME/gopath/bin/gocov report
+    - PATH=$PATH:$HOME/gopath/bin $HOME/gopath/bin/mocktest ./... 
