one more for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
 script:
     - env
     - go get -v ./...
-    - PATH=$PATH:$HOME/gopath/bin $HOME/gopath/bin/mocktest ./... 
+    - PATH=$PATH:$HOME/gopath/bin $HOME/gopath/bin/mocktest -gocov ./... | $HOME/gopath/bin/gocov report
