Story: Upload should only find files older than X minutes https://www.pivotaltracker.com/story/show/59341280

--- a/fixtures/sample-config.yaml
+++ b/fixtures/sample-config.yaml
@@ -3,6 +3,7 @@ auth:
     secretkey: mysupersecretkey
 monitordirs: 
     - path: /tmp/fixtures/monitordir/
+      time_threshold: 1382534191
       bucket: 34
       prehooks:
         - compress
