- use another 3rd-party lib for S3 that support connection using IAM Story: file uploader should give a unique name to the file before being uploaded to s3 https://www.pivotaltracker.com/story/show/60974272

--- a/fixtures/sample-config.yaml
+++ b/fixtures/sample-config.yaml
@@ -2,7 +2,7 @@
 auth:
     accesskey: myaccesskey
     secretkey: mysupersecretkey
-    iamurl: http://169.254.169.254/latest/meta-data/iam/security-credentials/LoopyRole
+    #iamurl: http://169.254.169.254/latest/meta-data/iam/security-credentials/LoopyRole
 monitordirs: 
     - path: /tmp/logs/loopy/event/
       time_threshold: 1382534191
